[tool.poetry]
name = "lighthouse-secrel-pipeline"
version = "0.1.0"
description = ""
authors = ["Schuyler Reinken <Schuyler.Reinken@va.gov>"]
license = ""

packages = []

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
